adding users + hash Password
